# payroll

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
payroll/: __init__.py  app.py  exceptions.py  gunicorn_config.py  logger_conf.py
payroll/common/: dependencies.py  exceptions.py  middleware.py  models.py  routers.py  schemas.py  services.py
payroll/frontend/: __init__.py  app.py  client.py  routers.py
payroll/frontend/templates/: base.html  index.html
payroll/frontend/templates/partials/: _error.html  _history.html  _results.html
payroll/migrations/: alembic.ini  alembic_runner.py  env.py
payroll/payroll_run/: exceptions.py  models.py  routers.py  schemas.py  services.py
payroll/tax/: constants.py  engine.py  schemas.py
tests/: conftest.py
tests/common/: test_common_routers.py
tests/payroll_run/: test_routers.py  test_service.py
tests/tax/: test_engine.py
